# netbox-services-plugin

./: LICENSE  README.md  pyproject.toml  setup.py
netbox_services/: README.md  __init__.py  filtersets.py  forms.py  models.py  navigation.py  tables.py  urls.py  views.py
netbox_services.egg-info/: PKG-INFO  SOURCES.txt
netbox_services/api/: serializers.py  urls.py  views.py
netbox_services/migrations/: 0001_initial.py  0002_maildomain_mailbox.py  0003_alter_mailbox_options_and_more.py
netbox_services/templates/netbox_services/: mailbox.html  maildomain.html  webserver.html  website.html
